feat: 이미지 수정 시 순서와 삭제 로직 고도화